--- a/templates/newhouse-index.tmpl
+++ b/templates/newhouse-index.tmpl
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 {{template "lib"}}
+{{set . "HTMLComponent" "新房" }}
 {{set . "HTMLTitle" "新房"}}
 {{template "head" .}}
-<body>
+<body id='page-newhouse-index'>
 
 	{{template "top" .}}
 	
@@ -21,7 +22,7 @@
 		</div>
 	</div>
 	
-	<div id='page-newhouse-index'>
+	<div>
 		<div id='bd'>
 		
 			<div class='section'>
