--- a/templates/news-index.tmpl
+++ b/templates/news-index.tmpl
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 {{template "lib"}}
+{{set . "HTMLComponent" "资讯" }}
 {{set . "HTMLTitle" "资讯"}}
 {{template "head" .}}
 <body>
