--- a/templates/manage-layout.tmpl
+++ b/templates/manage-layout.tmpl
@@ -15,6 +15,8 @@
 <link href="/assets/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 <link href="/assets/global/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css"/>
 <link href="/assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css"/>
+<link href="/assets/global/plugins/uploadify/jquery.uploadify.css" rel="stylesheet" type="text/css"/>
+<link href="/assets/global/plugins/uploadifive/jquery.uploadifive.css" rel="stylesheet" type="text/css"/>
 <!-- END GLOBAL MANDATORY STYLES -->
 <!-- BEGIN PAGE LEVEL PLUGIN STYLES -->
 <link href="/assets/global/plugins/gritter/css/jquery.gritter.css" rel="stylesheet" type="text/css"/>
@@ -208,6 +210,8 @@
 <script src="/assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
 <script src="/assets/global/plugins/jquery.serializejson.min.js" type="text/javascript"></script>
 <script src="/assets/global/plugins/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
+<script src="/assets/global/plugins/uploadify/jquery.uploadify.js" type="text/javascript"></script>
+<script src="/assets/global/plugins/uploadifive/jquery.uploadifive.js" type="text/javascript"></script>
 <!-- END CORE PLUGINS -->
 
 <!-- BEGIN PAGE LEVEL PLUGINS -->
