--- a/templates/manage-real-estate-form.tmpl
+++ b/templates/manage-real-estate-form.tmpl
@@ -25,13 +25,18 @@
 	</div>
 </div>
 <div class="row">
+	{{if .RealEstate}}
 	<ul class="nav nav-tabs">
 		<li class="active">
-			<a href="#tab_general" data-toggle="tab">
+			<a href="#tab-general" data-toggle="tab">
 			楼盘资料 </a>
 		</li>
 		<li class="">
-			<a href="#tab_meta" data-toggle="tab">
+			<a href="#tab-enviroment" data-toggle="tab">
+			参数环境</a>
+		</li>
+		<li class="">
+			<a href="#tab-images" data-toggle="tab">
 			楼盘图库 </a>
 		</li>
 		<li class="">
@@ -48,6 +53,7 @@
 			历史价格 </a>
 		</li>
 	</ul>
+	{{end}}
 	<div class='tab-content no-space'>
 		<div class="tab-pane active col-md-12" id='tab-general'>
 		<form class='form-horizontal' id='form-real-estate'>
@@ -254,10 +260,13 @@
 								</div>
 							</div>
 						</td>
-						<td><label class='control-label'>学区</label></td>
+						<td><label class='control-label'>工作时间<span class='required' aria-required='true'>*</span></label></td>
 						<td>
-							<label class='control-label'>小学</label>
-							<label class='control-label'>中学</label>
+							<div class='row'>
+								<div class='col-md-8'>
+									<input type='text' name='WorkTime:string' value='{{if .RealEstate}}{{if .RealEstate.WorkTime}}{{.RealEstate.WorkTime}}{{end}}{{end}}' class='form-control required'/>
+								</div>
+							</div>
 						</td>
 					</tr>
 					<tr>
@@ -323,8 +332,14 @@
 								</div>
 							</div>
 						</td>
-						<td></td>
-						<td></td>
+						<td><label class='control-label'>销售信息</label></td>
+						<td>
+							<div class='row'>
+								<div class='col-md-8'>
+									<input type='text' name='Sale' value="{{if .RealEstate}}{{if .RealEstate.Sale}}{{.RealEstate.Sale}}{{end}}{{end}}" class='form-control'/>
+								</div>
+							</div>
+						</td>
 					</tr>
 					<tr>
 						<td><label class='control-label'>物业公司</label></td>
@@ -385,8 +400,14 @@
 						<td colspan=3></td>
 					</tr>
 					<tr>
-						<td><label class='control-label'>楼盘广告语</label></td>
-						<td></td>
+						<td><label class='control-label'>楼盘广告语<span class='required' aria-required='true'>*</span></label></td>
+						<td>
+							<div class='row'>
+								<div class='col-md-8'>
+									<input type='text' name='Adword:string' value="{{if .RealEstate}}{{if .RealEstate.Adword}}{{.RealEstate.Adword}}{{end}}{{end}}" class='form-control required'/>
+								</div>
+							</div>
+						</td>
 						<td><label class='control-label'>楼盘特点</label></td>
 						<td></td>
 					</tr>
@@ -408,6 +429,149 @@
 			</table>
 			</form>
 		</div>
+		
+		{{if .RealEstate}}
+		<div class="tab-pane col-md-12" id='tab-enviroment'>
+			<form class='form-horizontal' id='form-real-estate-enviroment'>
+				<input type='hidden' name='Id' value='{{.RealEstate.Id}}' />
+				<input type='hidden' name='MTime[Created]:number' value='{{.RealEstate.MTime.Created}}' />
+				<table class="table table-striped table-bordered table-hover">
+					<tr>
+						<td><label class='control-label'>周边环境<span class='required' aria-required='true'>*</span></label></td>
+						<td>
+							<div class='row'>
+								<div class='col-md-8'>
+									<input type='text' name='Enviroment[Description]' value="{{if .RealEstate.Enviroment}}{{if .RealEstate.Enviroment.Description}}{{.RealEstate.Enviroment.Description}}{{end}}{{end}}" class='form-control required'/>
+								</div>
+							</div>
+						</td>
+						<td><label class='control-label'>车位比<span class='required' aria-required='true'>*</span></label></td>
+						<td>
+							<div class='row'>
+								<div class='col-md-8'>
+									<input type='text' name='Carbarn' value="{{if .RealEstate.Carbarn}}{{.RealEstate.Carbarn}}{{end}}" class='form-control required'/>
+								</div>
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<td><label class='control-label'>装修情况</label></td>
+						<td>
+							<div class='row'>
+								<div class='col-md-8'>
+									<input type='text' name='Decoration' value="{{if .RealEstate.Decoration}}{{.RealEstate.Decoration}}{{end}}" class='form-control'/>
+								</div>
+							</div>
+						</td>
+						<td><label class='control-label'>物业费</label></td>
+						<td>
+							<div class='row'>
+								<div class='col-md-8'>
+									<input type='text' name='PropertyFee' value="{{if .RealEstate.PropertyFee}}{{.RealEstate.PropertyFee}}{{end}}" class='form-control'/>
+								</div>
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<td><label class='control-label'>得房率</label></td>
+						<td>
+							<div class='row'>
+								<div class='col-md-8'>
+									<input type='text' name='EffectiveAreaRatio' value="{{if .RealEstate.EffectiveAreaRatio}}{{.RealEstate.EffectiveAreaRatio}}{{end}}" class='form-control'/>
+								</div>
+							</div>
+						</td>
+						<td><label class='control-label'>容积率</label></td>
+						<td>
+							<div class='row'>
+								<div class='col-md-8'>
+									<input type='text' name='FloorAreaRatio' value="{{if .RealEstate.FloorAreaRatio}}{{.RealEstate.FloorAreaRatio}}{{end}}" class='form-control'/>
+								</div>
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<td><label class='control-label'>绿化率</label></td>
+						<td>
+							<div class='row'>
+								<div class='col-md-8'>
+									<input type='text' name='GreenRatio' value="{{if .RealEstate.GreenRatio}}{{.RealEstate.GreenRatio}}{{end}}" class='form-control'/>
+								</div>
+							</div>
+						</td>
+						<td><label class='control-label'>学区</label></td>
+						<td>
+							<div class='row'>
+								<div class='col-md-8'>
+									<input type='text' name='Enviroment[Schools]' value="{{if .RealEstate.Enviroment}}{{if .RealEstate.Enviroment.Schools}}{{.RealEstate.Enviroment.Schools}}{{end}}{{end}}" class='form-control'/>
+								</div>
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td colspan=3>
+							<input type='submit' class='btn btn-success' value='保存' />
+							<a class='btn' href='./index.html'>取消</a>
+						</td>
+					</tr>
+				</table>
+			</form>
+		</div>
+		{{end}}
+		
+		{{if .RealEstate}}
+		<div class='tab-pane col-md-12' id="tab-images">
+		
+			<form class='form-horizontal' id='form-real-estate-picture'>
+			
+				<input type='hidden' name="Rid" value="{{.RealEstate.Id}}" />
+				<input type='hidden' name="RType" value="RealEstate" />
+				<input type='hidden' name="Resource[Id]" value="" />
+				<input type='hidden' name="Width:number" value="" />
+				<input type='hidden' name="Height:number" value="" />
+				<table class="table table-striped table-bordered table-hover">
+					<tbody>
+						<tr>
+							<td class='col-md-2'><label class='control-label'>图片类型</label></td>
+							<td class='col-md-10'>
+							
+								<select class='form-control' name="Type:number" >
+									{{range $k, $v := .CONTEXT.KVs.PictureType.Nodes}}
+										<option value="{{$v.Value}}">{{$v.Name}}</option>
+									{{end}}
+								</select>
+							</td>
+						</tr>
+						<tr>
+							<td class='col-md-2'><label class='control-label'>图片上传</label></td>
+							<td class='col-md-10'>
+							
+								<input type='file' id='PictureUpload' />
+								
+								<br/>
+								
+								<img id='pic-preview' src='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVQYV2NgYAAAAAMAAWgmWQ0AAAAASUVORK5CYII=' />
+							</td>
+						</tr>
+						<tr>
+							<td class='col-md-2'><label class='control-label'>图片名称</label></td>
+							<td class='col-md-10'>
+							
+								<input type='text' name='Name' class='form-control' value="" />
+							</td>
+						</tr>
+						<tr>
+							<td class='col-md-2'><label class='control-label'></label></td>
+							<td class='col-md-10'>
+								<input type='submit' class='btn btn-primary' value='上传' />
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</form>
+		</div>
+		{{end}}
 	</div>
 </div>
 
@@ -420,11 +584,83 @@ var PageLogical = function () {
 	
 	function FormInits(){
 		
+		
+		$('#pic-preview').load(function(){
+			
+			var form = $("#form-real-estate-picture");
+			
+			form.find('[name="Width:number"]').val($(this).width())
+			form.find('[name="Height:number"]').val($(this).height())
+		});
+		
+		$("#PictureUpload").upload({
+			buttonText: "浏览图片",
+			fileTypeDesc : '图片文件',
+			fileTypeExts : '*.gif; *.jpg; *.png',
+			fileSizeLimit: 2048,
+			queueSizeLimit: 1,
+			multi: false,
+			uploader:"/manage/upload.json",
+			uploadScript: "/manage/upload.json",
+			success: function(file ,data){
+				
+				var form = $("#form-real-estate-picture");
+				var file = JSON.parse(data);
+				
+				form.find("input[name=Name]").val(file.Name)
+				form.find('input[name="Resource[Id]"]').val(file.Id)
+				$('#pic-preview').attr("src", file.Path)
+			}
+		});
+		
+		$("#form-real-estate-picture").submit(function(){
+			
+			if(!$(this).valid()){
+				
+				$(this).find("input.error, select.error").first().focus();
+				return false; 
+			}
+			
+			var vals = $(this).serializeJSON()
+			
+			JWS("/manage/picture/upsert.json", vals).success(function(data){
+				
+				alert("Success!");
+			})
+			
+			return false;
+		});
+		
 		$(".form-datetime").datepicker({
             autoclose: true,
             format: "yyyy-mm-dd",
             pickerPosition: "bottom-left"
         });
+		
+		$("#form-real-estate-enviroment").submit(function(){
+			
+			if(!$(this).valid()){
+				
+				$(this).find("input.error, select.error").first().focus();
+				return false; 
+			}
+			
+			var vals = $(this).serializeJSON()
+			
+			JWS("/manage/real-estate/upsert.json", vals).success(function(data){
+				
+				Metronic.alert({
+                    type: 'success',
+                    icon: 'check',
+                    message: '保存成功...',
+                    container: $(".page-content"),
+                    place: 'prepend',
+                    closeInSeconds: 3
+                });
+			})
+			
+			return false;
+		})
 		
 		$("#form-real-estate").submit(function(){
 			
@@ -452,7 +688,7 @@ var PageLogical = function () {
 			
 			if(vals.Features && vals.Features.length > 0) {
 				
-				var a = vals.Features.split(",");
+				var a = vals.Features.split(/[,，]/);
 				var b = []
 				for(var i=0;i<a.length;i++){
 					a[i] = a[i].trim()
@@ -481,8 +717,6 @@ var PageLogical = function () {
 			}else{
 				delete vals.GroupClose
 			}
-			
-			$("#form-real-estate")
 			
 			JWS("/manage/real-estate/upsert.json", vals).success(function(data){
 				
